fix: overlapping issue with the footer fixed (#1177)

--- a/src/modules/70-pipeline/pages/pipelines/PipelinesPage.module.scss
+++ b/src/modules/70-pipeline/pages/pipelines/PipelinesPage.module.scss
@@ -89,6 +89,7 @@
   padding: 0 var(--spacing-xxlarge) !important;
   .gridLayout {
     height: calc(100% - 62px);
+    overflow: auto;
   }
 }
 
